# jtron

./: README.md  pyproject.toml
src/jtron/: __init__.py  model.py  train.py
