[project]
name = "jtron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jackson", email = "jacksonkunde@gmail.com" }
]
requires-python = ">=3.13"
depedencies = []
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
